--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,4 @@
 <p>4.Utworzyć drugi komponent secondChildComponent.</p>
 <p>5. Przekazać dane z firstChildComponent (imie i nazwisko) do secondChildComponent</p>
 <p>6. Utworzyć nawigację. Po naciśnięciu linku dodanego w AppComponent, przenawigować uzytkownika do  firstChildComponent</p>
+<p>7. Wydzielić moduł FirstModue, który będzie zawierał utworzone wcześniej komponentu</p>
